# corona-ng

./: Cargo.toml  DEPENDENCIES.md  LICENSE  README.md  flake.nix  licenses.html
.github/workflows/: build.yml
src/: app.rs  main.rs  store.rs
src/backend/: mod.rs  network.rs  scraper.rs
src/ui/: mod.rs
src/ui/components/: dashboard_screen.rs  login_screen.rs  mod.rs  signup_popup.rs  spinner.rs  start_screen.rs  time_input.rs
