[package]
name = "corona-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.1", features = ["full"] }
reqwest = { version = "0.13.2", features = [
  "json",
  "cookies",
  "multipart",
  "form",
] }
ratatui = "0.30.0"
crossterm = "0.29.0"
chrono = "0.4.44"
scraper = "0.26.0"
open = "5.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
keyring = { version = "3.6.3", features = ["linux-native"] }
rpassword = "7.4.0"
